--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -43,6 +43,15 @@ debug-adapters:
       protocol: swd
       clock: 10000000
 
+  - name: "KitProg3@pyOCD"
+    alias-name: ["KitProg3"]                  # alternative names that map to this debug adapter
+    template: CMSIS-DAP-pyOCD.adapter.json    # template file (initally same as CMSIS-DAP@pyOCD)
+    gdbserver:                                # add gdbserver: node under debugger: in cbuild-run.yml
+    defaults:                                 # default values to use when nowhere specified
+      port: 3333                              # default value of first gdbserver port
+      protocol: swd
+      clock: 10000000
+
   - name: "ST-Link@pyOCD"
     alias-name: ["ST-LINK"]                   # alternative names that map to this debug adapter
     template: STLink-pyOCD.adapter.json       # template file
