Arm Debugger template - WiP
Signed-off-by: Jens Reinecke <jens.reinecke@arm.com>

--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -73,3 +73,6 @@ debug-adapters:
 
   - name: "Keil uVision"
     template: uVision.adapter.json            # template file
+
+  - name: "Arm Debugger"
+    template: Arm-Debugger.adapter.json       # template file
