Address review comments

--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -97,5 +97,5 @@ debug-adapters:
   - name: "Keil uVision"
     template: uVision.adapter.json            # template file
     defaults:
-      uv4: "set uVision executable as target-set.debugger.uv4 in csolution.yml"
+      uv4: "C:\\Keil_v5\\UV4\\UV4.exe"
       args: []
