--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -1,7 +1,7 @@
 debug-adapters:
   - name: "CMSIS-DAP@pyOCD"
     alias-name: ["CMSIS-DAP", "DAP-Link"]       # alternative names that map to this debug adapter
-    template: CMSIS-DAP-pyOCD.adapter.json
+    template: CMSIS-DAP-pyOCD.adapter.json      # template files
     gdbserver:                                  # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                   # default values to use when nowhere specified
       port: 3333                                # default value of first gdbserver port
@@ -54,7 +54,7 @@ debug-adapters:
 
   - name: "ULINKplus@pyOCD"
     alias-name: ["ULINKplus"]                   # alternative names that map to this debug adapter
-    template: CMSIS-DAP-pyOCD.adapter.json  (initally same as CMSIS-DAP@pyOCD)
+    template: CMSIS-DAP-pyOCD.adapter.json      # template files  (initally same as CMSIS-DAP@pyOCD)
     gdbserver:                                  # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                   # default values to use when nowhere specified
       port: 3333                                # default value of first gdbserver port
@@ -105,7 +105,7 @@ debug-adapters:
 
   - name: "MCU-Link@pyOCD"
     alias-name: ["MCU-Link"]                    # alternative names that map to this debug adapter
-    template: CMSIS-DAP-pyOCD.adapter.json  (initally same as CMSIS-DAP@pyOCD)
+    template: CMSIS-DAP-pyOCD.adapter.json      # template files  (initally same as CMSIS-DAP@pyOCD)
     gdbserver:                                  # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                   # default values to use when nowhere specified
       port: 3333                                # default value of first gdbserver port
@@ -156,7 +156,7 @@ debug-adapters:
 
   - name: "Nu-Link@pyOCD"
     alias-name: ["Nu-Link", "Nu-Link-Pro"]      # alternative names that map to this debug adapter
-    template: CMSIS-DAP-pyOCD.adapter.json  (initally same as CMSIS-DAP@pyOCD)
+    template: CMSIS-DAP-pyOCD.adapter.json      # template files  (initally same as CMSIS-DAP@pyOCD)
     gdbserver:                                  # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                   # default values to use when nowhere specified
       port: 3333                                # default value of first gdbserver port
@@ -206,8 +206,8 @@ debug-adapters:
             default: 4444
 
   - name: "PICkit@pyOCD"
-    alias-name: ["PICkit Basic"]      # alternative names that map to this debug adapter
-    template: CMSIS-DAP-pyOCD.adapter.json  (initally same as CMSIS-DAP@pyOCD)
+    alias-name: ["PICkit Basic"]                # alternative names that map to this debug adapter
+    template: CMSIS-DAP-pyOCD.adapter.json      # template files  (initally same as CMSIS-DAP@pyOCD)
     gdbserver:                                  # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                   # default values to use when nowhere specified
       port: 3333                                # default value of first gdbserver port
@@ -258,7 +258,7 @@ debug-adapters:
 
   - name: "KitProg3@pyOCD"
     alias-name: ["KitProg3"]                    # alternative names that map to this debug adapter
-    template: CMSIS-DAP-pyOCD.adapter.json  (initally same as CMSIS-DAP@pyOCD)
+    template: CMSIS-DAP-pyOCD.adapter.json      # template files  (initally same as CMSIS-DAP@pyOCD)
     gdbserver:                                  # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                   # default values to use when nowhere specified
       port: 3333                                # default value of first gdbserver port
@@ -293,7 +293,7 @@ debug-adapters:
 
   - name: "RPiDebugProbe@pyOCD"
     alias-name: ["RaspberryPiDebugProbe"]       # alternative names that map to this debug adapter
-    template: CMSIS-DAP-pyOCD.adapter.json
+    template: CMSIS-DAP-pyOCD.adapter.json      # template files
     gdbserver:                                  # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                   # default values to use when nowhere specified
       port: 3333                                # default value of first gdbserver port
@@ -328,7 +328,7 @@ debug-adapters:
 
   - name: "ST-Link@pyOCD"
     alias-name: ["ST-LINK"]                     # alternative names that map to this debug adapter
-    template: STLink-pyOCD.adapter.json
+    template: STLink-pyOCD.adapter.json         # template files
     gdbserver:                                  # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                   # default values to use when nowhere specified
       port: 3333                                # default value of first gdbserver port
@@ -379,7 +379,7 @@ debug-adapters:
 
   - name: "JLink Server"
     alias-name: ["J-Link"]                      # alternative names that map to this debug adapter
-    template: JLink.adapter.json
+    template: JLink.adapter.json                # template files
     gdbserver:                                  # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                   # default values to use when nowhere specified
       port: 3333                                # default value of first gdbserver port
@@ -429,14 +429,14 @@ debug-adapters:
 
   - name: "CMSIS-DAP@Arm-Debugger"
     alias-name: ["CMSIS-DAP@armdbg"]
-    template: CMSIS-DAP-Arm-Debugger.adapter.json
+    template: CMSIS-DAP-Arm-Debugger.adapter.json       # template files
 
   - name: "ST-Link@Arm-Debugger"
     alias-name: ["ST-Link@armdbg"]
-    template: STLink-Arm-Debugger.adapter.json
+    template: STLink-Arm-Debugger.adapter.json          # template files
 
   - name: "AVH-FVP"
-    template: FVP.adapter.json
+    template: FVP.adapter.json                          # template files
     defaults:
       model: "set model executable as target-set.debugger.model in csolution.yml"
       config:
@@ -455,7 +455,7 @@ debug-adapters:
             description: Path to the model executable
 
   - name: "Keil uVision"
-    template: uVision.adapter.json
+    template: uVision.adapter.json                      # template files
     defaults:
       uv4: "C:\\Keil_v5\\UV4\\UV4.exe"
     ui:
